--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 	<div class="container mt-4">
 
-	<div class="footer">
+	<div class="header">
 		<h3> Kessuko Band Members </h3>
 	</div>
 
@@ -69,7 +69,6 @@
 
 		</table>
 	</div>	
-</body>
 
 
 	<div class="container mt-4">
@@ -94,4 +93,6 @@
 				<td>The older sister of Nijika. She's scary but very carring to the girls.</td>
 				<td>Manager of the live house STARRY </td>
 			</tr>
+		</table>
+</body>
 </html>
