--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			</tr>
 
 			<tr>
-				<td><img src="https://m.media-amazon.com/images/I/51R8yz3zWxL._AC_SL1000_.jpg" class="rounded-circle">
+				<td><img src="https://m.media-amazon.com/images/I/51R8yz3zWxL._AC_SL1000_.jpg>
 				<td>Ikuyo Kita >ᴗ< </td>
 				<td>Ikuyo is the vocalist, popular girl that admires Ryo Yamada from a street performance.</td>
 				<td>Guitarist and Vocalist</td>
@@ -61,7 +61,7 @@
 			</tr>
 
 			<tr>
-				<td><img src="https://projectogre.com/cdn/shop/files/gsc17722_0.jpg?v=1697081446&width=1100" class="rounded-circle">
+				<td><img src="https://projectogre.com/cdn/shop/files/gsc17722_0.jpg?v=1697081446&width=1100">
 				<td>Ryo Yamada ¬_¬" </td>
 				<td>Ryo is silent and is the bassist. Even though she is one of the richest in the band, she wouldn't pay for anything she buys/gets.</td>
 				<td>Bassist</td>
