--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 			</tr>
 
 			<tr>
-				<td><img src="https://projectogre.com/cdn/shop/files/gsc17722_0.jpg?v=1697081446&width=1100">
+				<td><img src="https://m.media-amazon.com/images/I/51ZL53xTgVL._AC_UF894,1000_QL80_.jpg">
 				<td>Ryo Yamada ¬_¬" </td>
 				<td>Ryo is silent and is the bassist. Even though she is one of the richest in the band, she wouldn't pay for anything she buys/gets.</td>
 				<td>Bassist</td>
