--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			</tr>
 
 			<tr>
-				<td><img src="https://m.media-amazon.com/images/I/51R8yz3zWxL._AC_SL1000_.jpg>
+				<td><img src="https://m.media-amazon.com/images/I/51R8yz3zWxL._AC_SL1000_.jpg">
 				<td>Ikuyo Kita >ᴗ< </td>
 				<td>Ikuyo is the vocalist, popular girl that admires Ryo Yamada from a street performance.</td>
 				<td>Guitarist and Vocalist</td>
